# Bachelorthesis

./: CMakeLists.txt  parameters_generate.txt
main/: CMakeLists.txt  plotjob.cpp
programmierkurs/: CMakeLists.txt  MeinErstesProgramm.cpp
src/: .gitignore  CMakeLists.txt  config.txt  cp-test2.cpp  dootoy1.cpp  dootoy2.cpp  dootoycp-lhcb.cpp  dootoycp.cpp  dootoycp_dgamma.cpp  dootoycp_different.cpp  dootoycp_float.cpp  dootoycp_gen.cpp  dootoycp_omega.cpp  dootoycp_spline.cpp  jobs_dootoycp.sh  jobs_toy.sh  pulldist.cpp
src/ToyStudy/: config-cp.txt  dgamma_param.txt  dootoycp-config.txt  dootoycp-parameter.txt  dootoycp-parameter_spline.txt  dootoycp-parameter_spline1.txt  dootoycp_spline-config.txt  f_param.txt  fit-result.txt  parameters-cp.txt  parameters_generate2.txt
src/ToyStudy/dootoy/: config2.txt
src/ToyStudy/dootoycp/: dootoycp-config.txt
test/: CMakeLists.txt
